# scenerepair

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run.py
configs/: mindedit_qwen25vl7b.yaml  mindedit_qwen3vl8b.yaml  mindedit_rootrepair.yaml  mindedit_vllm_api.yaml  mock_smoke.yaml
docs/: EXPERIMENTS.md  METHOD.md
scenerepair/: __init__.py  baselines.py  calibration.py  causal_graph.py  cli.py  config.py  data.py  diagnosis.py  evaluation.py  interventions.py  io.py  parsing.py  pipeline.py  prompts.py  repair.py  schemas.py  training.py  utils.py  visualization.py
scenerepair/critics/: __init__.py  ensemble.py  learned.py  symbolic.py  vlm.py
scenerepair/models/: __init__.py  base.py  factory.py  mock.py  openai_api.py
scripts/: aggregate_seeds.py  make_toy_data.py  run_ablations.sh  run_full_mindedit.sh  run_multiseed.sh
tests/: test_causal_root.py  test_interventions.py  test_label_free.py  test_parsing.py  test_pipeline.py
